--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -1,26 +1,24 @@
 ﻿@model DealDouble.Web.ViewModels.AuctionsViewModel
-@{
-    ViewBag.Title = "Auction List";
-    if (!Request.IsAjaxRequest())
-    {
-        Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+<div id="listingArea" class="col-lg-12">
+    @{
+        ViewBag.Title = "Auction List";
+        if (!Request.IsAjaxRequest())
+        {
+            Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+        }
+
     }
 
-}
-
-<div class="row">
-
-    <div id="listingArea" class="col-lg-12">
-        <div class="row">
-            <h2 class="font-weight-bold float-left">Auctions</h2>
-        </div>
+    <div class="row">
+            <div class="col-md-12 mt-1 ">
+                <h3 class="font-weight-bold float-left">Auctions</h3>
+            </div>
+       
+     
 
         <div class="col-md-12 mt-2">
             <div class="row">
-           
-              
                 <div class="col-md-2 float-right">
-                    <label class="font-weight-bold"> Select Rows</label>
                     <select name="pageSize" class="form-control" id="pageSize">
                         <option value="10">10</option>
                         <option value="20">20</option>
@@ -29,29 +27,30 @@
                         <option value="100">100</option>
                     </select>
                 </div>
-            
-                <div class="col-md-3 float-right">
-                    <label class="font-weight-bold">Category</label>
+
+                <div class="col-md-3">
                     <select name="CategoryID" class="form-control" id="searchByCategory">
+                        <option value="0" disabled selected>
+                            Select Category
+                        </option>
                         @foreach (var category in Model.Categories)
                         {
                             <option value="@category.ID">@category.Name</option>
                         }
                     </select>
                 </div>
-                <div class="col-md-2 float-right ">
-                    <label class="font-weight-bold">Search</label>
-                    <input type="search" id="searchText" name="search" class="form-control" value="@Model.SearchTearm" />
-              
+                <div class="col-md-2">
+                    <input type="search" id="searchText" name="search" class="form-control" placeholder="Search.." value="@Model.SearchTearm"/>
+
                 </div>
-                <div class="col-md-2 mt-4">
-                    <button class="btn btn-md btn-danger" type="button" id="searchBtn"><i class="fas fa-search"></i></button>
+                <div class="col-md-3">
+                    <button class="btn btn-md btn-danger" type="button" id="searchBtn"><i class="fa fa-search"></i></button>
                     <button class="btn btn-md btn-success" type="button" id="resetBtn">Reset</button>
-                </div>
-                <div class="col-md-3 float-right mt-4">
-                    <button id="createAuction" class="btn  btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fas fa-plus"></i> Crate New Auction</button>
+                
+                    <button id="createAuction" class="btn  btn-success" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i>New</button>
                 </div>
             </div>
+       
 
 
         </div>
@@ -72,19 +71,19 @@
                 {
                     foreach (var data in Model.AllAuction)
                     {
-                    <tr>
-                        <td>@data.Title</td>
-                        <td>@data.Category.Name</td>
-                        <td>@data.Description</td>
-                        <td>@data.ActualAmount</td>
-                        <td>@data.StartingTime</td>
-                        <td>@data.EndTime</td>
-                        <td>
-                            <button class="editButton btn btn-sm btn-primary" data-id="@data.AuctionID" data-toggle="modal" data-target="#auctionCreateFrom"> Edit </button>
-                            <button class="deleteButton btn btn-sm btn-danger" data-id="@data.AuctionID"> Delete </button>
-                        </td>
+                        <tr>
+                            <td>@data.Title</td>
+                            <td>@data.Category.Name</td>
+                            <td>@data.Description</td>
+                            <td>@data.ActualAmount</td>
+                            <td>@data.StartingTime</td>
+                            <td>@data.EndTime</td>
+                            <td>
+                                <button class="editButton btn btn-sm btn-primary" data-id="@data.AuctionID" data-toggle="modal" data-target="#auctionCreateFrom"> <i class="fa fa-edit"></i> </button>
+                                <button class="deleteButton btn btn-sm btn-danger" data-id="@data.AuctionID"> <i class="fa fa-trash"></i> </button>
+                            </td>
 
-                    </tr>
+                        </tr>
                     }
                 }
                 else
@@ -127,7 +126,7 @@
                                 </li>
                             }
                         }
-                       
+
                     </ul>
                 </nav>
             </div>
@@ -143,7 +142,7 @@
 
         <script>
             $(".datalink").click(function () {
-                var url = $(this).attr("data-href");            
+                var url = $(this).attr("data-href");
                 $.ajax({
                     metod: "Get",
                     url: url,
@@ -164,13 +163,13 @@
                 var searchText = $("#searchText").val();
                 $.ajax({
                     metod: "Get",
-                    url: "@Url.Action("Index", "Auction")",                  
-            }).done(function (response) {
-                $("#listingArea").html(response);
-            }).fail(function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                alert(thrownError);
-            })
+                    url: "@Url.Action("Index", "Auction")",
+                }).done(function (response) {
+                    $("#listingArea").html(response);
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                })
 
             });
             $("#searchBtn").click(function () {
@@ -195,14 +194,15 @@
                     metod: "Get",
                     url: "@Url.Action("Index", "Auction")",
                     data: { pageSize:pageSize, categoryID: @Model.CategoryID, searchTearm: '@Model.SearchTearm' }
-            }).done(function (response) {
-                $("#listingArea").html(response);
-                $("#pageSize option[selected]").removeAttr("selected");
-                $("#pageSize option[value=" + pageSize + "]").attr("selected","selected");
-            }).fail(function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                alert(thrownError);
-            })
+                }).done(function (response) {
+                    $("#listingArea").html('');
+                    $("#listingArea").html(response);
+                    $("#pageSize option[selected]").removeAttr("selected");
+                    $("#pageSize option[value=" + pageSize + "]").attr("selected","selected");
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                })
 
             });
             $("#searchByCategory").change(function () {
@@ -211,14 +211,14 @@
                     metod: "Get",
                     url: "@Url.Action("Index", "Auction")",
                     data: { categoryID: categoryId, searchTearm: '@Model.SearchTearm', pageSize:'@Model.PageSize' }
-            }).done(function (response) {
-                $("#listingArea").html(response);
-                $("#searchByCategory option[selected]").removeAttr("selected");
-                $("#searchByCategory option[value=" + categoryId + "]").attr("selected","selected");
-            }).fail(function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                alert(thrownError);
-            })
+                }).done(function (response) {
+                    $("#listingArea").html(response);
+                    $("#searchByCategory option[selected]").removeAttr("selected");
+                    $("#searchByCategory option[value=" + categoryId + "]").attr("selected","selected");
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    alert(thrownError);
+                })
 
             });
             $("#createAuction").click(function () {
@@ -289,11 +289,11 @@
                 $("#pictuerArea").append($newHtml.html());
                 RemovingImage();
             }
-        
+
             function ReloadListing() {
                 $.ajax({
                     metod: "Get",
-                    url: "@Url.Action("Index", "Auction")",                  
+                    url: "@Url.Action("Index", "Auction")",
                 }).done(function (response) {
                     $("#listingArea").html(response);
                 }).fail(function (xhr, ajaxOptions, thrownError) {
@@ -311,6 +311,7 @@
         </script>
     </div>
 </div>
+
 <!-- Modal -->
 <div class="modal fade bd-example-modal-xl" id="auctionCreateFrom" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-xl">
