--- a/DealDouble.Web/Views/Category/Index.cshtml
+++ b/DealDouble.Web/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-12 mt-2">
 
             <h2 class="font-weight-bold float-left">@ViewBag.Title</h2>
-            <button id="createCateogory" class="btn btn-sm btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fas fa-plus"></i>Crate New Category</button>
+            <button id="createCateogory" class="btn btn-sm btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i>Crate New Category</button>
         </div>
         <table class="table  table-striped table-hover mt-3">
             <thead class="bg-info">
